# altar

./: CMakeLists.txt  README.md  main.c  main.cpp
.github/workflows/: cmake.yml
src/: main.c
